tests/ui/parser/issues/issue-20711-2.rs
struct Foo;

impl Foo {
    fn foo() {}

    #[stable(feature = "rust1", since = "1.0.0")]
    //~^ ERROR expected item after attributes
}

fn main() {}
